force-app/main/default/objects/Bird_Returns_Site_Compliance_Visit__c.object
<CustomObject>
    <description>Records overall site data for compliance site visits in the Bird Returns program.</description>
    <fields>
        <fullName>Bid_Contact_Name__c</fullName>
        <formula>Bid_ID__r.Bid_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the name of the primary contact for the bid.</inlineHelpText>
        <label>Bid Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Contact_Phone__c</fullName>
        <formula>Bid_ID__r.Bid_Contact_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the phone number for the primary contact for the bid.</inlineHelpText>
        <label>Bid Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_ID__c</fullName>
        <description>The Contract that this Site Compliance Visit is for.</description>
        <inlineHelpText>Lookup to the contract associated with this site compliance visit.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Site Compliance VIsits</relationshipLabel>
        <relationshipName>Site_Compliance_VIsits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bid_Number__c</fullName>
        <formula>Bid_ID__r.BirdReturns_Bid_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically pulls in the bid number from the contract.</inlineHelpText>
        <label>Bid Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Total_Percent_Out_of_Compliance__c</fullName>
        <description>Calculated value.  No longer in use. Deprecating.</description>
        <formula>Percent_Out_of_Compliance_Site__c + Percent_Out_of_Compliance_Stakes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated value.</inlineHelpText>
        <label>XDeprecated: Total % Out of Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Definition_of_Compliance__c</fullName>
        <formula>Bid_ID__r.Program_Period__r.Definition_of_Compliance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Deprecating, as we&apos;re removing it from the program period (redundant field).</inlineHelpText>
        <label>XDeprecated: Definition of Compliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_percent_in_Compliance__c</fullName>
        <description>The estimated % of the contracted acreage that is flooded to compliance.</description>
        <inlineHelpText>The estimated % of the contracted acreage that is flooded to compliance.</inlineHelpText>
        <label>Est % in Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field_Tech_Notes__c</fullName>
        <inlineHelpText>Any additional observations or notes for the program staff about this site visit.</inlineHelpText>
        <label>Field Tech Notes</label>
        <length>36000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incomplete__c</fullName>
        <description>Indicates if the site visit is not complete based on stakes reported vs. number of active stakes on the contract. Deprecating. Using the &apos;Report Extent&apos; field instead.</description>
        <formula>IF( Total_Stakes__c &lt;  Total_Contract_Stakes__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the site visit is not complete based on stakes reported vs. number of active stakes on the contract.</inlineHelpText>
        <label>XDeprecated: Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Override_Justification__c</fullName>
        <description>Not in use anymore; override on contract level only.</description>
        <label>XDeprecatedManual Override Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Override_in_Compliance__c</fullName>
        <description>Use this field to manually override the estimated % in compliance for this visit. This override number is what will be calculated up to the Contract level and should be used only in very extenuating circumstances. Not used anyomore; only override on contract level.</description>
        <inlineHelpText>Use this field to manually override the estimated % in compliance for this visit. This override number is what will be calculated up to the Contract level and should be used only in very extenuating circumstances.</inlineHelpText>
        <label>Xdeprecated: Manual Override % in Comp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Map_Link_1__c</fullName>
        <description>Stored in Dropbox.</description>
        <inlineHelpText>Link to map uploaded by Field Tech. They may upload up to 4 images.</inlineHelpText>
        <label>Map Link 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Map_Link_2__c</fullName>
        <description>Stored in Dropbox.</description>
        <inlineHelpText>Link to map uploaded by Field Tech. They may upload up to 4 images.</inlineHelpText>
        <label>Map Link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Map_Link_3__c</fullName>
        <description>Stored in Dropbox.</description>
        <inlineHelpText>Link to map uploaded by Field Tech. They may upload up to 4 images.</inlineHelpText>
        <label>Map Link 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name_of_Reporter__c</fullName>
        <inlineHelpText>Full name of the person submitting the site compliance visit report.</inlineHelpText>
        <label>Reporter Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Out_of_Compliance_Site__c</fullName>
        <description>The number of percentage points below the compliance threshold that a field is overall. Not in use. Deprecating.</description>
        <formula>if(isblank(Est_percent_in_Compliance__c),
    0,
    if(Est_percent_in_Compliance__c&gt;Bid_ID__r.Program_Period__r.Minimum_Flooded_for_Compliance__c, 
        0, 
        Bid_ID__r.Program_Period__r.Minimum_Flooded_for_Compliance__c-Est_percent_in_Compliance__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of percentage points below the compliance threshold that a field is overall.</inlineHelpText>
        <label>XDeprecated: % Out of Compliance (Site)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Out_of_Compliance_Stakes__c</fullName>
        <description>Not in use. Deprecating.</description>
        <formula>if(isblank(Percent_of_Stakes_in_Compliance__c),
    0,
    if(Percent_of_Stakes_in_Compliance__c&gt;Bid_ID__r.Program_Period__r.Minimum_Stakes_in_Compliance__c, 
        0, 
        Bid_ID__r.Program_Period__r.Minimum_Stakes_in_Compliance__c-Percent_of_Stakes_in_Compliance__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% of the stakes that are out of compliance.</inlineHelpText>
        <label>XDeprecated:% Out of Compliance (Stakes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Stakes_in_Compliance__c</fullName>
        <formula>if(Total_Stakes__c&gt;0,(Total_Stakes_in_Compliance__c / Total_Stakes__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of stakes that are in compliance.</inlineHelpText>
        <label>Stks % in Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Report_Extent__c</fullName>
        <inlineHelpText>Indicates if the SCV is a full or partial report (if the compliance monitoring was done by more than one field tech, both reports will be &apos;partial&apos;). If the report was completed by a single field tech over consecutive days, it will be &apos;full&apos;.</inlineHelpText>
        <label>Report Extent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                    <default>true</default>
                    <label>Full</label>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporter_Type__c</fullName>
        <description>Used to filter the roll-up summaries that calculate final compliance numbers.</description>
        <inlineHelpText>Indicates if the reporter is a field tech (who submitted a report via iForm) or a self reporter who submitted a report at http://birdreturns.org/report-water-depth/.</inlineHelpText>
        <label>Reporter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-reporter</fullName>
                </value>
                <value>
                    <fullName>Field Tech reporter</fullName>
                    <default>true</default>
                    <label>Field Tech reporter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Field Techs are the only ones that update this field.</description>
        <inlineHelpText>Excellent (large numbers of birds present)
Good (reasonable numbers of birds present)
Fair (a few birds present)
Poor (very few birds present)
Very Poor (no birds present)</inlineHelpText>
        <label>Estimate Shorebird Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Very Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stakes_Reported__c</fullName>
        <formula>text(Total_Stakes__c) &amp; &quot;/&quot; &amp; text(Bid_ID__r.Total_Active_Stakes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the number of stakes reported vs. the total number of stakes on the contract.</inlineHelpText>
        <label>Stakes Reported</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Stakes__c</fullName>
        <formula>Bid_ID__r.Total_Active_Stakes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Stakes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_In_Compliance_for_Calc__c</fullName>
        <description>Est % in compliance or Manual Override % in Compliance if it exists.</description>
        <formula>Total_Stakes__c  *  Est_percent_in_Compliance__c</formula>
        <inlineHelpText>Formula field to calculate the % in compliance from estimated % in compliance OR from the manual override if it is used. This field is referred to in the Workflow rule that calculates total % in compliance for the contract financials.</inlineHelpText>
        <label>Total % In Compliance for Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Percent_In_Compliance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Inverse of Total % Out of Compliance (Manual Override if populated; Calculated if not). Populated by Workflow Rule so it can be rolled up to the Contract.</description>
        <inlineHelpText>Inverse of Total % Out of Compliance (Manual Override if populated; Calculated if not). Populated by Workflow Rule so it can be rolled up to the Contract.</inlineHelpText>
        <label>Total % In Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Stakes__c</fullName>
        <description>Total number of stake visits. (Used to calculate % of stakes in compliance.)</description>
        <inlineHelpText>Total number of stake visits. (Used to calculate % of stakes in compliance.)</inlineHelpText>
        <label>Total Stakes</label>
        <summaryForeignKey>Bird_Returns_Stake_Compliance_Visit__c.Site_Compliance_Visit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Stakes_in_Compliance__c</fullName>
        <description>Total number of stakes in compliance on this visit</description>
        <inlineHelpText>Total number of stakes in compliance on this visit</inlineHelpText>
        <label>Total Stakes in Compliance</label>
        <summaryFilterItems>
            <field>Bird_Returns_Stake_Compliance_Visit__c.In_Compliance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bird_Returns_Stake_Compliance_Visit__c.Site_Compliance_Visit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Visit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iForm_User__c</fullName>
        <inlineHelpText>Unique identifier for the iForm user who submitted this site visit report (and it&apos;s associated stake depth reports).</inlineHelpText>
        <label>iForm User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Site Compliance Visit</label>
    <listViews>
        <fullName>All_Site_Visits</fullName>
        <columns>Bid_Number__c</columns>
        <columns>NAME</columns>
        <columns>Visit_Date__c</columns>
        <columns>iForm_User__c</columns>
        <columns>Total_Percent_In_Compliance__c</columns>
        <columns>Field_Tech_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Current Site Visits</label>
    </listViews>
    <listViews>
        <fullName>SCVs</fullName>
        <columns>Bid_Number__c</columns>
        <columns>NAME</columns>
        <columns>Visit_Date__c</columns>
        <columns>Report_Extent__c</columns>
        <columns>Est_percent_in_Compliance__c</columns>
        <columns>Field_Tech_Notes__c</columns>
        <columns>Name_of_Reporter__c</columns>
        <columns>Map_Link_1__c</columns>
        <columns>Map_Link_2__c</columns>
        <columns>Map_Link_3__c</columns>
        <columns>Map_Link_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bid_Number__c</field>
            <operation>contains</operation>
            <value>18-F</value>
        </filters>
        <label>SCVs</label>
    </listViews>
    <nameField>
        <displayFormat>SCV-{000000}</displayFormat>
        <label>Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Compliance Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>